Fix search modal dismiss on mobile
- Add click handler on modal background to close when clicking outside content
- Add cursor styles to indicate clickability

🤖 Implemented together with a coding agent.

--- a/_sass/_search.scss
+++ b/_sass/_search.scss
@@ -29,9 +29,14 @@
   align-items: flex-start;
   justify-content: center;
   padding-top: 15vh;
+  cursor: pointer;
 
   &.search-modal--open {
     display: flex;
+  }
+
+  &__content {
+    cursor: default;
   }
 
   &__content {
